<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/test_template"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/test_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_size_m"
                android:background="@drawable/patch_yellow"
                android:text="@string/test_stats_activity_total"
                android:textSize="@dimen/font_size_l"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/test_score"
                android:gravity="center"
                android:text="@string/test_stats_activity_score_text"
                android:textSize="@dimen/font_size_m"/>

            <TextView
                android:id="@+id/test_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/test_stats_activity_score_vale"
                android:textSize="@dimen/font_size_x"/>

            <TextView
                android:id="@+id/test_incorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/test_score"
                android:gravity="center"
                android:text="@string/test_stats_activity_incorrect"
                android:textSize="@dimen/font_size_m"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/test_stats_repeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_size_m"
                android:background="@drawable/patch_cyan"
                android:text="@string/test_stats_activity_repeat"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/test_stats_tests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_size_m"
                android:background="@drawable/patch_cyan"
                android:text="@string/test_stats_activity_tests"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
