<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/lessons_template"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_size_m"
                android:background="@drawable/patch_yellow"
                android:text="@string/lesson_stats_activity_topic"
                android:textSize="@dimen/font_size_l"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_lesson_stats"
                android:contentDescription="@string/null_value"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_repeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_size_m"
                android:background="@drawable/patch_cyan"
                android:text="@string/lesson_stats_activity_repeat"
                android:onClick="onRepeatClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_lessons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sep_size_m"
                android:background="@drawable/patch_cyan"
                android:text="@string/lesson_stats_activity_lessons"
                android:onClick="onLessonsClick"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
